# udp-----

./: .gitignore  BUILD_FIX_FINAL.md  CHECKLIST.md  CMakeLists.txt  DELIVERY_REPORT.txt  DEPLOY_GITHUB.md  Dockerfile  FIX_SUMMARY.txt  GITHUB_ACTIONS_CHECKLIST.md  GITHUB_ACTIONS_FIX.md  GITHUB_CI_CD.md  GITHUB_SETUP_SUMMARY.txt  INDEX.md  LICENSE  MANIFEST.md  PROJECT_COMPLETE.txt  QUICKSTART_CI_CD.md  README.md  START_HERE.txt  TEST_GITHUB_ACTIONS.md  build.bat  docker-compose.yml  install-ffmpeg.ps1  requirements.txt  setup.py  udp_streamer.py  verify_project.ps1  verify_project.sh  快速开始.txt
.github/scripts/: build-cpp.sh  build-python.sh  setup-ffmpeg.sh
.github/workflows/: build.yml  release.yml  test.yml
src/: encoder.cpp  encoder.h  main.cpp  screen_capture.cpp  screen_capture.h  udp_streamer.cpp  udp_streamer.h
